src/snapshots/zeek_language_server__lsp__test__goto_implementation.snap
---
source: src/lsp.rs
expression: "server.goto_implementation(super::GotoImplementationParams\n{\n    text_document_position_params:\n    TextDocumentPositionParams::new(TextDocumentIdentifier::new(uri_evts),\n    Position::new(1, 11)), partial_result_params:\n    PartialResultParams::default(), work_done_progress_params:\n    WorkDoneProgressParams::default(),\n}).await"
---
Ok(
    Some(
        Array(
            [
                Location {
                    uri: Url {
                        scheme: "file",
                        cannot_be_a_base: false,
                        username: "",
                        password: None,
                        host: None,
                        port: None,
                        path: "/x.zeek",
                        query: None,
                        fragment: None,
                    },
                    range: Range {
                        start: Position {
                            line: 3,
                            character: 0,
                        },
                        end: Position {
                            line: 3,
                            character: 20,
                        },
                    },
                },
                Location {
                    uri: Url {
                        scheme: "file",
                        cannot_be_a_base: false,
                        username: "",
                        password: None,
                        host: None,
                        port: None,
                        path: "/x.zeek",
                        query: None,
                        fragment: None,
                    },
                    range: Range {
                        start: Position {
                            line: 4,
                            character: 0,
                        },
                        end: Position {
                            line: 4,
                            character: 20,
                        },
                    },
                },
            ],
        ),
    ),
)
