src/snapshots/zeek_language_server__lsp__test__hover_decl_in_func_parameters.snap
---
source: src/lsp.rs
assertion_line: 1148
expression: server.hover(params).await

---
Ok(
    Some(
        Hover {
            contents: Array(
                [
                    LanguageString(
                        LanguageString {
                            language: "zeek",
                            value: "y",
                        },
                    ),
                    LanguageString(
                        LanguageString {
                            language: "lisp",
                            value: "(id)",
                        },
                    ),
                    String(
                        "### variable `y`",
                    ),
                    String(
                        "Type: `Y`",
                    ),
                    String(
                        "```zeek\ny: Y\n```",
                    ),
                ],
            ),
            range: Some(
                Range {
                    start: Position {
                        line: 4,
                        character: 4,
                    },
                    end: Position {
                        line: 4,
                        character: 5,
                    },
                },
            ),
        },
    ),
)
