src/snapshots/zeek_language_server__lsp__test__inlay_hint_client_config.snap
---
source: src/lsp.rs
expression: "server.inlay_hint(InlayHintParams\n{\n    text_document: TextDocumentIdentifier::new((*uri).clone()), range:\n    Range::new(Position::new(0, 0), Position::new(5, 0)),\n    work_done_progress_params: WorkDoneProgressParams::default(),\n}).await"
---
Ok(
    Some(
        [],
    ),
)
