src/snapshots/zeek_language_server__lsp__test__inlay_hint_function_params.snap
---
source: src/lsp.rs
expression: "server.inlay_hint(InlayHintParams\n{\n    text_document: TextDocumentIdentifier::new((*uri).clone()), range:\n    Range::new(Position::new(0, 0), Position::new(u32::MAX, 0)),\n    work_done_progress_params: WorkDoneProgressParams::default(),\n}).await"
---
Ok(
    Some(
        [
            InlayHint {
                position: Position {
                    line: 2,
                    character: 10,
                },
                label: String(
                    "x:",
                ),
                kind: Some(
                    Parameter,
                ),
                text_edits: None,
                tooltip: Some(
                    MarkupContent(
                        MarkupContent {
                            kind: Markdown,
                            value: "```zeek\nx: count\n```",
                        },
                    ),
                ),
                padding_left: None,
                padding_right: Some(
                    true,
                ),
                data: None,
            },
            InlayHint {
                position: Position {
                    line: 2,
                    character: 15,
                },
                label: String(
                    "y:",
                ),
                kind: Some(
                    Parameter,
                ),
                text_edits: None,
                tooltip: Some(
                    MarkupContent(
                        MarkupContent {
                            kind: Markdown,
                            value: "```zeek\ny: string\n```",
                        },
                    ),
                ),
                padding_left: None,
                padding_right: Some(
                    true,
                ),
                data: None,
            },
            InlayHint {
                position: Position {
                    line: 5,
                    character: 10,
                },
                label: String(
                    "x:",
                ),
                kind: Some(
                    Parameter,
                ),
                text_edits: None,
                tooltip: Some(
                    MarkupContent(
                        MarkupContent {
                            kind: Markdown,
                            value: "```zeek\nx: count\n```",
                        },
                    ),
                ),
                padding_left: None,
                padding_right: Some(
                    true,
                ),
                data: None,
            },
            InlayHint {
                position: Position {
                    line: 5,
                    character: 17,
                },
                label: String(
                    "x:",
                ),
                kind: Some(
                    Parameter,
                ),
                text_edits: None,
                tooltip: Some(
                    MarkupContent(
                        MarkupContent {
                            kind: Markdown,
                            value: "```zeek\nx: count\n```",
                        },
                    ),
                ),
                padding_left: None,
                padding_right: Some(
                    true,
                ),
                data: None,
            },
            InlayHint {
                position: Position {
                    line: 8,
                    character: 10,
                },
                label: String(
                    "x:",
                ),
                kind: Some(
                    Parameter,
                ),
                text_edits: None,
                tooltip: Some(
                    MarkupContent(
                        MarkupContent {
                            kind: Markdown,
                            value: "```zeek\nx: count\n```",
                        },
                    ),
                ),
                padding_left: None,
                padding_right: Some(
                    true,
                ),
                data: None,
            },
        ],
    ),
)
