src/snapshots/zeek_language_server__lsp__test__references-4.snap
---
source: src/lsp.rs
assertion_line: 3440
expression: "server.references(ReferenceParams\n{\n    text_document_position:\n    TextDocumentPositionParams::new(TextDocumentIdentifier::new((*uri).clone()),\n    Position::new(4, 6),), work_done_progress_params:\n    WorkDoneProgressParams::default(), partial_result_params:\n    PartialResultParams::default(), context: ReferenceContext\n    { include_declaration: false, },\n}).await"
---
Ok(
    Some(
        [
            Location {
                uri: Uri(
                    Uri {
                        scheme: "file",
                        authority: Some(
                            Authority {
                                userinfo: None,
                                host: "",
                                host_parsed: RegName(
                                    "",
                                ),
                                port: None,
                            },
                        ),
                        path: "/x.zeek",
                        query: None,
                        fragment: None,
                    },
                ),
                range: Range {
                    start: Position {
                        line: 6,
                        character: 10,
                    },
                    end: Position {
                        line: 6,
                        character: 11,
                    },
                },
            },
            Location {
                uri: Uri(
                    Uri {
                        scheme: "file",
                        authority: Some(
                            Authority {
                                userinfo: None,
                                host: "",
                                host_parsed: RegName(
                                    "",
                                ),
                                port: None,
                            },
                        ),
                        path: "/x.zeek",
                        query: None,
                        fragment: None,
                    },
                ),
                range: Range {
                    start: Position {
                        line: 7,
                        character: 10,
                    },
                    end: Position {
                        line: 7,
                        character: 11,
                    },
                },
            },
        ],
    ),
)
