src/snapshots/zeek_language_server__lsp__test__semantic_tokens_full.snap
---
source: src/lsp.rs
expression: "server.semantic_tokens_full(SemanticTokensParams\n{\n    text_document: TextDocumentIdentifier::new(uri),\n    work_done_progress_params: WorkDoneProgressParams::default(),\n    partial_result_params: PartialResultParams::default(),\n}).await"
---
Ok(
    Some(
        Tokens(
            SemanticTokens {
                result_id: None,
                data: [
                    SemanticToken {
                        delta_line: 1,
                        delta_start: 8,
                        length: 5,
                        token_type: 6,
                        token_modifiers_bitset: 0,
                    },
                    SemanticToken {
                        delta_line: 1,
                        delta_start: 8,
                        length: 8,
                        token_type: 12,
                        token_modifiers_bitset: 0,
                    },
                    SemanticToken {
                        delta_line: 0,
                        delta_start: 8,
                        length: 1,
                        token_type: 2,
                        token_modifiers_bitset: 0,
                    },
                    SemanticToken {
                        delta_line: 0,
                        delta_start: 1,
                        length: 3,
                        token_type: 0,
                        token_modifiers_bitset: 0,
                    },
                    SemanticToken {
                        delta_line: 0,
                        delta_start: 3,
                        length: 1,
                        token_type: 10,
                        token_modifiers_bitset: 0,
                    },
                    SemanticToken {
                        delta_line: 0,
                        delta_start: 1,
                        length: 1,
                        token_type: 10,
                        token_modifiers_bitset: 0,
                    },
                    SemanticToken {
                        delta_line: 0,
                        delta_start: 1,
                        length: 1,
                        token_type: 2,
                        token_modifiers_bitset: 0,
                    },
                    SemanticToken {
                        delta_line: 0,
                        delta_start: 1,
                        length: 1,
                        token_type: 10,
                        token_modifiers_bitset: 0,
                    },
                    SemanticToken {
                        delta_line: 0,
                        delta_start: 1,
                        length: 1,
                        token_type: 10,
                        token_modifiers_bitset: 0,
                    },
                    SemanticToken {
                        delta_line: 1,
                        delta_start: 8,
                        length: 8,
                        token_type: 12,
                        token_modifiers_bitset: 0,
                    },
                    SemanticToken {
                        delta_line: 0,
                        delta_start: 8,
                        length: 1,
                        token_type: 2,
                        token_modifiers_bitset: 0,
                    },
                    SemanticToken {
                        delta_line: 0,
                        delta_start: 1,
                        length: 3,
                        token_type: 0,
                        token_modifiers_bitset: 0,
                    },
                    SemanticToken {
                        delta_line: 0,
                        delta_start: 3,
                        length: 1,
                        token_type: 10,
                        token_modifiers_bitset: 0,
                    },
                    SemanticToken {
                        delta_line: 0,
                        delta_start: 1,
                        length: 1,
                        token_type: 10,
                        token_modifiers_bitset: 0,
                    },
                    SemanticToken {
                        delta_line: 0,
                        delta_start: 1,
                        length: 1,
                        token_type: 2,
                        token_modifiers_bitset: 0,
                    },
                    SemanticToken {
                        delta_line: 0,
                        delta_start: 1,
                        length: 1,
                        token_type: 10,
                        token_modifiers_bitset: 0,
                    },
                    SemanticToken {
                        delta_line: 0,
                        delta_start: 1,
                        length: 1,
                        token_type: 10,
                        token_modifiers_bitset: 0,
                    },
                    SemanticToken {
                        delta_line: 0,
                        delta_start: 2,
                        length: 8,
                        token_type: 12,
                        token_modifiers_bitset: 0,
                    },
                    SemanticToken {
                        delta_line: 0,
                        delta_start: 8,
                        length: 1,
                        token_type: 2,
                        token_modifiers_bitset: 0,
                    },
                    SemanticToken {
                        delta_line: 0,
                        delta_start: 1,
                        length: 3,
                        token_type: 0,
                        token_modifiers_bitset: 0,
                    },
                    SemanticToken {
                        delta_line: 0,
                        delta_start: 3,
                        length: 1,
                        token_type: 10,
                        token_modifiers_bitset: 0,
                    },
                    SemanticToken {
                        delta_line: 0,
                        delta_start: 1,
                        length: 1,
                        token_type: 10,
                        token_modifiers_bitset: 0,
                    },
                    SemanticToken {
                        delta_line: 0,
                        delta_start: 1,
                        length: 1,
                        token_type: 2,
                        token_modifiers_bitset: 0,
                    },
                    SemanticToken {
                        delta_line: 0,
                        delta_start: 1,
                        length: 1,
                        token_type: 10,
                        token_modifiers_bitset: 0,
                    },
                    SemanticToken {
                        delta_line: 0,
                        delta_start: 1,
                        length: 1,
                        token_type: 10,
                        token_modifiers_bitset: 0,
                    },
                ],
            },
        ),
    ),
)
